add detail crud with migrations
